Menu fixed - using z-index instead of visibility

--- a/app/assets/stylesheets/modules/_site-header.css
+++ b/app/assets/stylesheets/modules/_site-header.css
@@ -111,36 +111,37 @@
       &::before {
         opacity: 0;
         transform: scaleX(0);
+        z-index: -10;
       }
       .site-header__menu-icon__middle {
         opacity: 0;
         /* shrink bar to 0 size */
         transform: scaleX(0);
+        z-index: -10;
       }
       &::after {
         opacity: 0;
         transform: scaleX(0);
+        z-index: -10;
       }
     }
 
     &__close {
-      &::before {
-        opacity: 0;
-        transform: scaleX(0);
-      }
       color: #fff;
-      visibility: hidden;
+      opacity: 0;
+      z-index: -10;
       font-size: 28px;
       font-weight: 400;
       cursor: pointer;
       &--active {
         opacity: 1;
-        visibility: visible;
+        z-index: 1;
       }
       &:hover {
         color: $mainGreen;
       }
     }
+
     @mixin atLarge {
       display: none;
     }
@@ -149,7 +150,7 @@
   &__menu {
     background-color: color($mainBlueBackground a(88%) b(+5%));
     opacity: 0;
-    position: relative;
+    position: absolute;
     z-index: -10;
     padding-bottom: 20px;
     left: 0;
@@ -171,6 +172,7 @@
     }
 
     @mixin atLarge {
+      position: static;
       opacity: 1;
       z-index: 1;
       background-color: transparent;
